<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/GeneralBack">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/LinearVertical"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="simbirsoft.android.homework.MainActivity"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables"
        android:weightSum="1">


        <ImageView
            android:id="@+id/imageCat"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/androidimg"
            android:contentDescription="@string/ContentDescription"/>

        <TextView
            android:id="@+id/TitleText"
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/TitleText" />

        <TextView
            android:id="@+id/GeneralText"
            style="@style/GeneralText"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="7dp"
            android:text="@string/textCats" />

        <LinearLayout
            android:id="@+id/LinearHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ChangeColorBackRed"
                style="ColorChangeText"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/ColorChangeRed"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/colorChangeRed" />

            <TextView
                android:id="@+id/ChangeColorBackBlue"
                style="ColorChangeText"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/ColorChangeBlue"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/colorChangeBlue" />

            <TextView
                android:id="@+id/ChangeColorBackGreen"
                style="ColorChangeText"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="2"
                android:background="@color/ColorChangeGreen"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/colorChangeGreen" />
    </LinearLayout>
    </LinearLayout>
</ScrollView>